chore: implememted column validation & fixed csv upload
